// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render button 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  color: #000;
  background-color: #e0e1e2;
  border-color: #e0e1e2;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #e0e1e2;
}

.c0:hover {
  background-color: hsl(210,3.3%,100%);
}

.c0:active {
  background-color: hsl(210,3.3%,70.6%);
}

<button
  className="c0"
  color="default"
  size="medium"
  type="button"
>
  Hello Button
</button>
`;

exports[`Should render button when bg prop 1`] = `
Array [
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #000;
  background-color: #e0e1e2;
  border-color: #e0e1e2;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #e0e1e2;
}

.c0:hover {
  background-color: hsl(210,3.3%,100%);
}

.c0:active {
  background-color: hsl(210,3.3%,70.6%);
}

<button
    className="c0"
    color="default"
    size="medium"
    type="button"
  >
    Default
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #000;
  background-color: #e0e1e2;
  border-color: #e0e1e2;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #e0e1e2;
}

.c0:hover {
  background-color: hsl(210,3.3%,100%);
}

.c0:active {
  background-color: hsl(210,3.3%,70.6%);
}

<button
    className="c0"
    color="default"
    size="medium"
    type="button"
  >
    Default
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #ef4d5a;
  border-color: #ef4d5a;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #ef4d5a;
}

.c0:hover {
  background-color: hsl(355.20000000000005,83.5%,74.4%);
}

.c0:active {
  background-color: hsl(355.20000000000005,83.5%,49.6%);
}

<button
    className="c0"
    color="primary"
    size="medium"
    type="button"
  >
    Primary
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #550e33;
  border-color: #550e33;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #550e33;
}

.c0:hover {
  background-color: hsl(328.70000000000005,71.7%,23.3%);
}

.c0:active {
  background-color: hsl(328.70000000000005,71.7%,15.5%);
}

<button
    className="c0"
    color="secondary"
    size="medium"
    type="button"
  >
    Secondary
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #550e33;
  border-color: #550e33;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #550e33;
}

.c0:hover {
  background-color: hsl(328.70000000000005,71.7%,23.3%);
}

.c0:active {
  background-color: hsl(328.70000000000005,71.7%,15.5%);
}

<button
    className="c0"
    color="fullDarkRed"
    size="medium"
    type="button"
  >
    fullDarkRed
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #9c2543;
  border-color: #9c2543;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #9c2543;
}

.c0:hover {
  background-color: hsl(344.9,61.7%,45.4%);
}

.c0:active {
  background-color: hsl(344.9,61.7%,30.3%);
}

<button
    className="c0"
    color="darkRed"
    size="medium"
    type="button"
  >
    darkRed
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #ef4d5a;
  border-color: #ef4d5a;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #ef4d5a;
}

.c0:hover {
  background-color: hsl(355.20000000000005,83.5%,74.4%);
}

.c0:active {
  background-color: hsl(355.20000000000005,83.5%,49.6%);
}

<button
    className="c0"
    color="lightRed"
    size="medium"
    type="button"
  >
    lightRed
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #db2828;
  border-color: #db2828;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #db2828;
}

.c0:hover {
  background-color: hsl(0,71.3%,60.9%);
}

.c0:active {
  background-color: hsl(0,71.3%,40.6%);
}

<button
    className="c0"
    color="red"
    size="medium"
    type="button"
  >
    red
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #000;
  background-color: #f2711c;
  border-color: #f2711c;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #f2711c;
}

.c0:hover {
  background-color: hsl(23.80000000000001,89.2%,63.5%);
}

.c0:active {
  background-color: hsl(23.80000000000001,89.2%,42.4%);
}

<button
    className="c0"
    color="orange"
    size="medium"
    type="button"
  >
    orange
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #000;
  background-color: #fbbd08;
  border-color: #fbbd08;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #fbbd08;
}

.c0:hover {
  background-color: hsl(44.69999999999999,96.8%,60.9%);
}

.c0:active {
  background-color: hsl(44.69999999999999,96.8%,40.6%);
}

<button
    className="c0"
    color="yellow"
    size="medium"
    type="button"
  >
    yellow
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #000;
  background-color: #b5cc18;
  border-color: #b5cc18;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #b5cc18;
}

.c0:hover {
  background-color: hsl(67.69999999999999,78.9%,53.6%);
}

.c0:active {
  background-color: hsl(67.69999999999999,78.9%,35.8%);
}

<button
    className="c0"
    color="olive"
    size="medium"
    type="button"
  >
    olive
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #21BA45;
  border-color: #21BA45;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #21BA45;
}

.c0:hover {
  background-color: hsl(134.10000000000002,69.9%,51.5%);
}

.c0:active {
  background-color: hsl(134.10000000000002,69.9%,34.4%);
}

<button
    className="c0"
    color="green"
    size="medium"
    type="button"
  >
    green
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #00b5ad;
  border-color: #00b5ad;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #00b5ad;
}

.c0:hover {
  background-color: hsl(177.29999999999995,100%,42.6%);
}

.c0:active {
  background-color: hsl(177.29999999999995,100%,28.4%);
}

<button
    className="c0"
    color="teal"
    size="medium"
    type="button"
  >
    teal
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #2185d0;
  border-color: #2185d0;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #2185d0;
}

.c0:hover {
  background-color: hsl(205.70000000000005,72.6%,56.7%);
}

.c0:active {
  background-color: hsl(205.70000000000005,72.6%,37.8%);
}

<button
    className="c0"
    color="blue"
    size="medium"
    type="button"
  >
    blue
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #6435c9;
  border-color: #6435c9;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #6435c9;
}

.c0:hover {
  background-color: hsl(259.1,58.3%,59.8%);
}

.c0:active {
  background-color: hsl(259.1,58.3%,39.8%);
}

<button
    className="c0"
    color="violet"
    size="medium"
    type="button"
  >
    violet
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #a333c8;
  border-color: #a333c8;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #a333c8;
}

.c0:hover {
  background-color: hsl(285.1,59.4%,59.1%);
}

.c0:active {
  background-color: hsl(285.1,59.4%,39.4%);
}

<button
    className="c0"
    color="purple"
    size="medium"
    type="button"
  >
    purple
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #e03997;
  border-color: #e03997;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #e03997;
}

.c0:hover {
  background-color: hsl(326.20000000000005,72.9%,66.1%);
}

.c0:active {
  background-color: hsl(326.20000000000005,72.9%,44.1%);
}

<button
    className="c0"
    color="pink"
    size="medium"
    type="button"
  >
    pink
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #a5673f;
  border-color: #a5673f;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #a5673f;
}

.c0:hover {
  background-color: hsl(23.5,44.7%,53.6%);
}

.c0:active {
  background-color: hsl(23.5,44.7%,35.8%);
}

<button
    className="c0"
    color="brown"
    size="medium"
    type="button"
  >
    brown
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #767676;
  border-color: #767676;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #767676;
}

.c0:hover {
  background-color: hsl(0,0%,55.5%);
}

.c0:active {
  background-color: hsl(0,0%,37%);
}

<button
    className="c0"
    color="grey"
    size="medium"
    type="button"
  >
    grey
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #fff;
  background-color: #1b1c1d;
  border-color: #1b1c1d;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #1b1c1d;
}

.c0:hover {
  background-color: hsl(210,3.6%,13.2%);
}

.c0:active {
  background-color: hsl(210,3.6%,8.8%);
}

<button
    className="c0"
    color="black"
    size="medium"
    type="button"
  >
    black
  </button>,
]
`;

exports[`Should render button when size prop 1`] = `
Array [
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #000;
  background-color: #e0e1e2;
  border-color: #e0e1e2;
  font-size: 14px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #e0e1e2;
}

.c0:hover {
  background-color: hsl(210,3.3%,100%);
}

.c0:active {
  background-color: hsl(210,3.3%,70.6%);
}

<button
    className="c0"
    color="default"
    size="small"
    type="button"
  >
    Default
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #000;
  background-color: #e0e1e2;
  border-color: #e0e1e2;
  font-size: 16px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #e0e1e2;
}

.c0:hover {
  background-color: hsl(210,3.3%,100%);
}

.c0:active {
  background-color: hsl(210,3.3%,70.6%);
}

<button
    className="c0"
    color="default"
    size="medium"
    type="button"
  >
    Primary
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #000;
  background-color: #e0e1e2;
  border-color: #e0e1e2;
  font-size: 20px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #e0e1e2;
}

.c0:hover {
  background-color: hsl(210,3.3%,100%);
}

.c0:active {
  background-color: hsl(210,3.3%,70.6%);
}

<button
    className="c0"
    color="default"
    size="big"
    type="button"
  >
    Primary
  </button>,
  .c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  padding: .5rem 1rem;
  border-style: solid;
  color: #000;
  margin: 8px;
  color: #000;
  background-color: #e0e1e2;
  border-color: #e0e1e2;
  font-size: 24px;
  box-sizing: border-box;
}

.c0:focus {
  box-shadow: 0 0 8px #e0e1e2;
}

.c0:hover {
  background-color: hsl(210,3.3%,100%);
}

.c0:active {
  background-color: hsl(210,3.3%,70.6%);
}

<button
    className="c0"
    color="default"
    size="huge"
    type="button"
  >
    Secondary
  </button>,
]
`;
